Enhance documentation across various topics with detailed use cases and avoidance scenarios
- Added use cases and avoidance scenarios for JUnit, Mockito, Testcontainers, Agile, Scrum, CAP Theorem, Consistent Hashing, Chat System, Distributed Cache, Notification System, Parking Lot, Rate Limiter, URL Shortener, Load Balancing, API Testing, Integration Testing, Jest, and Vitest.
- Improved clarity and guidance for testing methodologies and system design principles.